--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "keywords": [
     "arbitrary-length"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": ["/dist"],
+  "main": "dist/MonsterFloat.js",
+  "types": "dist/MonsterFloat.d.ts",
+  "files": [
+    "/dist"
+  ],
   "author": "Snake",
   "license": "MIT",
   "devDependencies": {
     "rollup": "^4.52.5"
+  },
+  "dependencies": {
+    "monsterfloat": "^1.0.3"
   }
 }
